--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "symfony-bundle",
     "description": "Use ExtJs with Symfony 2",
     "keywords": ["extjs", "bundle", "symfony2"],
-    "homepage": "",
+    "homepage": "https://github.com/jamesmoey/extjs-bundle",
     "license": "MIT",
     "authors": [
         {
@@ -25,7 +25,8 @@
     "require-dev": {
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/mongodb-odm": "1.0.*@dev",
-        "doctrine/mongodb-odm-bundle": "3.0.*@dev"
+        "doctrine/mongodb-odm-bundle": "3.0.*@dev",
+        "phpunit/phpunit": "~3.7"
     },
     "scripts": {
         "post-install-cmd": [
