--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.3.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "jms/serializer": ">=0.12,<0.15-dev",
+        "symfony/symfony": "~2.3",
+        "doctrine/orm": "~2.2",
+        "jms/serializer": ">=0.12,<=0.14",
         "jms/serializer-bundle": ">=0.12,<0.14-dev",
         "jms/di-extra-bundle": "~1.4",
         "sensio/generator-bundle": "2.3.*",
-        "friendsofsymfony/rest-bundle": ">=0.12",
+        "friendsofsymfony/rest-bundle": "~1.0",
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/doctrine-bundle": "~1.2",
         "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
         "phpunit/phpunit": "~3.7"
