--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
 env:
@@ -16,8 +15,8 @@ before_script:
     - echo "extension=mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - composer require symfony/symfony:${SYMFONY_VERSION}
     - composer install --dev
-    - php Tests/app/console generate:rest:controller --controller TestTestBundle:MyCar --entity TestTestBundle:Car
-    - php Tests/app/console generate:rest:controller --controller TestTestBundle:MyCarOwner --entity TestTestBundle:CarOwner
+    - php Tests/app/console generate:rest:controller -t --controller TestTestBundle:MyCar --entity TestTestBundle:Car
+    - php Tests/app/console generate:rest:controller -t --controller TestTestBundle:MyCarOwner --entity TestTestBundle:CarOwner
     - php Tests/app/console doctrine:database:create
     - php Tests/app/console doctrine:schema:create
     - php -S 127.0.0.1:8888 -t Tests Tests/app_test.php &
