--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     ],
     "require": {
         "php": "~5.4",
-        "symfony/symfony": "~2.3",
+        "symfony/symfony": "~2.5",
         "doctrine/orm": "~2.2",
         "jms/serializer": ">=0.12,<=0.14",
         "jms/serializer-bundle": ">=0.12,<0.14-dev",
         "jms/di-extra-bundle": "~1.4",
-        "sensio/generator-bundle": "2.3.*",
+        "sensio/generator-bundle": "~2.5",
         "friendsofsymfony/rest-bundle": "~1.0",
         "incenteev/composer-parameter-handler": "~2.0"
     },
