Updated jms/serializer, jms/serializer-bundle versions

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "php": "~5.4",
         "symfony/symfony": "~2.5",
         "doctrine/orm": "~2.2",
-        "jms/serializer": ">=0.12,<=0.14",
-        "jms/serializer-bundle": ">=0.12,<0.14-dev",
+        "jms/serializer": ">=0.12,~1.0",
+        "jms/serializer-bundle": ">=0.12,~1.0",
         "jms/di-extra-bundle": "~1.4",
         "sensio/generator-bundle": "~2.5",
         "friendsofsymfony/rest-bundle": "~1.0",
