--- a/composer.json
+++ b/composer.json
@@ -12,21 +12,21 @@
         }
     ],
     "require": {
-        "php": "~5.4",
-        "symfony/symfony": "~2.5",
-        "doctrine/orm": "~2.2",
+        "php": ">=5.4",
+        "symfony/symfony": ">=2.5",
+        "doctrine/orm": ">=2.2",
         "jms/serializer": ">=0.12,~1.0",
         "jms/serializer-bundle": ">=0.12,~1.0",
-        "jms/di-extra-bundle": "~1.4",
-        "sensio/generator-bundle": "~2.5",
-        "friendsofsymfony/rest-bundle": "~1.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "jms/di-extra-bundle": ">=1.4",
+        "sensio/generator-bundle": ">=2.5",
+        "friendsofsymfony/rest-bundle": ">=1.0",
+        "incenteev/composer-parameter-handler": ">=2.0"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "~1.2",
+        "doctrine/doctrine-bundle": ">=1.2",
         "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": ">=3.7"
     },
     "scripts": {
         "post-install-cmd": [
